--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -503,6 +503,53 @@ section {
     text-align: left;
     width: 100%;
 }
+#spinButton, .spin-againB {
+    background: rgb(192,39,45);
+    background: linear-gradient(61deg, rgba(192,39,45,1) 0%, rgba(255,22,56,1) 16.2011%, rgba(255,22,56,1) 85.1955%, rgba(192,39,45,1) 100%);
+    position: relative;
+    color: #fff;
+    padding: 15px;
+    border: 0;
+    outline: 0;
+    border-radius: 12px;
+    font-size: 26px;
+    font-weight: bold;
+    font-family: 'Bliss Pro';
+    margin-top: 1.5rem;
+    text-decoration: none;
+    box-shadow: 5px 8px 11px -1px rgba(0,0,0,0.61);
+-webkit-box-shadow: 5px 8px 11px -1px rgba(0,0,0,0.61);
+-moz-box-shadow: 5px 8px 11px -1px rgba(0,0,0,0.61);
+display: block;
+text-align: center;
+}
+#spinButton span, .spin-againB span {
+    z-index: 2;
+    position: relative;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 1);
+}
+#spinButton::after, .spin-againB::after {
+    content: "";
+    background: url('../images/button-overlay.svg') no-repeat bottom center;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: 1;
+    mix-blend-mode: multiply;
+}
+.spin-againB span small {
+    display: block;
+}
+p.disclaimer {
+    margin: 2rem 0;
+}
+img.recipebook {
+    max-height: 250px;
+    width: auto;
+    height: 100%;
+}
 
 
 /* SPINNER ENDS */
